FIX: Boolean filter check box was aligned to the right

--- a/src/gui/Components/ScreenElements/Table/Header.module.scss
+++ b/src/gui/Components/ScreenElements/Table/Header.module.scss
@@ -126,10 +126,5 @@ along with ORIGAM. If not, see <http://www.gnu.org/licenses/>.
 }
 
 .additionalContentsRow {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
   width: 100%;
-  min-height: 25px;
-  padding-right: 8px;
 }
